Add user photos on proposals in the discussion area.

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -139,7 +139,8 @@ li.preview a {
     height: 18px;
   }
   .position .position-message .word-break{
-    padding-left: 0.4em;
+    /*padding-left: 0.4em;*/
+    font-size: 0.9em;
   }
 
   /* proposal */
